--- a/Muse/Views/Home/Index.cshtml
+++ b/Muse/Views/Home/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Muse";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Muse</h1>
+    <p class="lead">To get started please register! It's free and takes less than 10 seconds.</p>
+    <p><a href="@Url.Action("Register", "Account")" class="btn btn-primary btn-large">Register &raquo;</a></p>
+
 </div>
 
 <div class="row">
